--- a/client/components/Apartments/ApartmentList/ApartmentList.scss
+++ b/client/components/Apartments/ApartmentList/ApartmentList.scss
@@ -15,6 +15,12 @@
       -webkit-column-gap: 25px;
       column-count: 2;
       column-gap: 25px;
+      @media(max-width: 880px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        width: calc(100vw - 40px);
+      }
     }
   }
 }
