--- a/client/components/Campuses/Campuses.scss
+++ b/client/components/Campuses/Campuses.scss
@@ -1,14 +1,20 @@
 @import "../../vars";
 
 .Campuses {
+  max-width: 100vw;
+  height: 100vh;
+  overflow: hidden;
   .container {
     max-width: 1100px;
+    min-width: 1100px;
     margin: auto;
     height: 100%;
     position: relative;
+    @media(max-width: 525px) {
+      margin-left: calc(100vw - calc(100vw + 110px));
+    }
     object {
       opacity: 0.0;
-      -webkit-transition: opacity 1s ease;
       transition: opacity 1s ease;
       position: absolute;
       top: 80px;
@@ -17,15 +23,9 @@
     }
   }
   .modal {
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    justify-content: center;
+    align-items: center;
     position: fixed;
     margin-left: 0px;
     margin-top: 0px;
@@ -39,15 +39,9 @@
       box-shadow: 0px 3px 6px rgba(0,0,0,0.16);
       width: 150px;
       height: 150px;
-      display: -webkit-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-pack: center;
-          -ms-flex-pack: center;
-              justify-content: center;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
+      justify-content: center;
+      align-items: center;
       color: white;
       &:hover {
         background: $devblue;
