--- a/client/components/Nav/Nav.scss
+++ b/client/components/Nav/Nav.scss
@@ -7,6 +7,7 @@
   width: 100%;
   z-index: 1;
   position: fixed;
+  max-width: 100vw;
   .container {
     max-width: 1100px;
     margin: auto;
@@ -28,12 +29,8 @@
     }
     .links {
       float: right;
-      display: -webkit-box;
-      display: -ms-flexbox;
       display: flex;
-      -webkit-box-align: center;
-          -ms-flex-align: center;
-              align-items: center;
+      align-items: center;
       height: 100%;
       a {
         padding: 25px;
