--- a/client/components/Nav/Nav.scss
+++ b/client/components/Nav/Nav.scss
@@ -34,6 +34,9 @@
       height: 100%;
       a {
         padding: 25px;
+        @media(max-width: 600px) {
+          padding-left: 0px;
+        }
         text-decoration: none;
         color: $white;
         &:hover {
